--- a/main.css
+++ b/main.css
@@ -225,26 +225,27 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
   }
 .fc {
 
-  /* "primary" coloring */
+  /* "text-button" coloring */
 
 }
-.fc .fc-button-primary {
+.fc .fc-text-button {
     color: #fff;
-    color: var(--fc-button-text-color, #fff);
-    background-color: #2C3E50;
-    background-color: var(--fc-button-bg-color, #2C3E50);
-    border-color: #2C3E50;
-    border-color: var(--fc-button-border-color, #2C3E50);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: var(--fc-button-text-color, #FFF);
+    background-color: #FF5667;
+    background-color: var(--fc-button-bg-color, #FF5667);
+    border-color: #FF5667;
+    border-color: var(--fc-button-border-color, #FF5667);
   }
-.fc .fc-button-primary:hover {
+.fc .fc-text-button:hover {
     color: #fff;
     color: var(--fc-button-text-color, #fff);
     background-color: #1e2b37;
-    background-color: var(--fc-button-hover-bg-color, #1e2b37);
+    background-color: var(--fc-button-hover-bg-color, #f67784);
     border-color: #1a252f;
-    border-color: var(--fc-button-hover-border-color, #1a252f);
+    border-color: var(--fc-button-hover-border-color, #F67784);
   }
-.fc .fc-button-primary:disabled { /* not DRY */
+.fc .fc-text-button:disabled { /* not DRY */
     color: #fff;
     color: var(--fc-button-text-color, #fff);
     background-color: #2C3E50;
@@ -252,27 +253,49 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
     border-color: #2C3E50;
     border-color: var(--fc-button-border-color, #2C3E50); /* overrides :hover */
   }
-.fc .fc-button-primary:focus {
-    box-shadow: 0 0 0 0.2rem rgba(76, 91, 106, 0.5);
+.fc .fc-text-button:focus {
+    box-shadow: 0 0 0 0.1rem #F67784;
   }
-.fc .fc-button-primary:not(:disabled):active,
-  .fc .fc-button-primary:not(:disabled).fc-button-active {
+.fc .fc-text-button:not(:disabled):active,
+  .fc .fc-text-button:not(:disabled).fc-button-active {
     color: #fff;
     color: var(--fc-button-text-color, #fff);
-    background-color: #1a252f;
-    background-color: var(--fc-button-active-bg-color, #1a252f);
-    border-color: #151e27;
-    border-color: var(--fc-button-active-border-color, #151e27);
+    background-color: #FF5667;
+    background-color: var(--fc-button-active-bg-color, #FF5667);
+    border-color:#FF5667#151e27;
+    border-color: var(--fc-button-active-border-color, #FF5667);
   }
-.fc .fc-button-primary:not(:disabled):active:focus,
-  .fc .fc-button-primary:not(:disabled).fc-button-active:focus {
-    box-shadow: 0 0 0 0.2rem rgba(76, 91, 106, 0.5);
+.fc .fc-text-button:not(:disabled):active:focus,
+  .fc .fc-text-button:not(:disabled).fc-button-active:focus {
+    box-shadow: 0 0 0 0.1rem #F67784;
   }
+.fc {
 
+    /* icon buttons */
+
+  }
+.fc .fc-icon-button {
+    color: #D3D5DC;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: var(--fc-button-text-color, #D3D5DC);
+    background-color: transparent;
+    background-color: var(--fc-button-bg-color, transparent);
+    border-color: transparent;
+    border-color: var(--fc-button-border-color, transparent);
+  }
+.fc .fc-icon-button:hover {
+    color: #D3D5DC;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: var(--fc-button-text-color, #D3D5DC);
+    background-color: transparent;
+    background-color: var(--fc-button-bg-color, transparent);
+    border-color: transparent;
+    border-color: var(--fc-button-border-color, transparent);
+  }
 .fc, .fc-
 .fc {
 
-  /* icons within buttons */
+  /* buttons with icons */
 
 }
 .fc .fc-button .fc-icon {
@@ -318,6 +341,7 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 20px;
   }
 .fc .fc-toolbar.fc-header-toolbar {
     margin-bottom: 1.5em;
@@ -325,13 +349,25 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
 .fc .fc-toolbar.fc-footer-toolbar {
     margin-top: 1.5em;
   }
-.fc .fc-toolbar-title {
+.fc .fc-toolbar-title-group {
+  text-align: center;
+  vertical-align: middle;
+  display: inline-block;
+  position: relative;
+  }
+.fc .fc-toolbar-month {
     display: inline-flex;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: strong;
     font-size: 1.25em;
     margin: 0;
   }
+.fc .fc-toolbar-year {
+   padding: 0;
+   color:#7E8593;
+   margin: 0;
+   font-weight: lighter;
+}
 .fc-direction-ltr .fc-toolbar > * > :not(:first-child) {
     margin-left: .75em; /* space between */
   }
